Socket Sentry changelog

0.9.3
=====
* CHANGED Ubuntu packaging to be more release-agnostic.

0.9.2 - 5-Apr-2010
==================
* Issue #7: CHANGED process owner username lookups to be asynchronous
  with cached results. Meant to reduce network chatter on systems with
  remote user databases (e.g. LDAP).
* Issue #4: CHANGED popup mode to passive so popup remains open until
  explicitly dismissed by the user.
* Issue #1: CHANGED applet to prompt the user to select a device if the
  default ("any") pseudo-device is not available. (Reported on Arch Linux.)
* Issue #2: FIXED applet failing with an error if IPv6 is disabled.
* Issue #6: FIXED building with LDFLAGS="-Wl,--as-needed" by moving
  Qt/libpcap linkages from executables to libraries.

0.9.1 - 28-Mar-2010
===================
* ADDED clear button to quick search box.
* FIXED KDE 4.4 regression that blocked signals from the service
  and prevented sort freeze label from appearing.

0.9.0
======
* Initial release