@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>371</width>
+    <width>356</width>
     <height>350</height>
    </rect>
   </property>
