@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>429</width>
+    <width>428</width>
     <height>442</height>
    </rect>
   </property>
@@ -22,55 +22,71 @@
     </widget>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="selectedDeviceLayout">
-     <item>
-      <widget class="QLabel" name="selectedDeviceLabel">
-       <property name="text">
-        <string>Selected &amp;device:</string>
-       </property>
-       <property name="buddy">
-        <cstring>selectedDeviceComboBox</cstring>
-       </property>
-      </widget>
+    <layout class="QGridLayout" name="topGridLayout" columnstretch="1,1">
+     <item row="0" column="0">
+      <layout class="QHBoxLayout" name="deviceHorizontalLayout">
+       <item>
+        <widget class="QLabel" name="selectedDeviceLabel">
+         <property name="text">
+          <string>Selected &amp;device:</string>
+         </property>
+         <property name="buddy">
+          <cstring>selectedDeviceComboBox</cstring>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QComboBox" name="selectedDeviceComboBox">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="toolTip">
+          <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'DejaVu Sans'; font-size:8pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Choose a specific network device to monitor or choose &quot;any&quot;&lt;span style=&quot; font-style:italic;&quot;&gt; &lt;/span&gt;to see traffic across all supported devices.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         </property>
+         <property name="whatsThis">
+          <string/>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
      </item>
-     <item>
-      <widget class="QComboBox" name="selectedDeviceComboBox">
+     <item row="0" column="1">
+      <widget class="QCheckBox" name="showFilterSortCheckBox">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+        <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
        <property name="toolTip">
-        <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'DejaVu Sans'; font-size:8pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Choose a specific network device to monitor or choose &quot;any&quot;&lt;span style=&quot; font-style:italic;&quot;&gt; &lt;/span&gt;to see traffic across all supported devices.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        <string>Show or hide the quick search and freeze sort controls.</string>
        </property>
-       <property name="whatsThis">
-        <string/>
+       <property name="text">
+        <string>Show search and sort controls</string>
        </property>
       </widget>
      </item>
-     <item>
-      <spacer name="horizontalSpacer">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-    </layout>
-   </item>
-   <item>
-    <layout class="QHBoxLayout" name="topHorizontalLayout">
-     <item>
+     <item row="1" column="0">
       <widget class="KButtonGroup" name="groupByButtonGroup">
        <property name="toolTip">
         <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
@@ -107,7 +123,7 @@ p, li { white-space: pre-wrap; }
        </layout>
       </widget>
      </item>
-     <item>
+     <item row="1" column="1">
       <widget class="QGroupBox" name="subdomainLevelsGroupBox">
        <property name="toolTip">
         <string>Choose how many levels of subdomain details to show when host name lookups are enabled.</string>
